# rusplay

./: .envrc  .gitignore  Cargo.toml  Clippy.toml  LICENSE.txt  README.md  devenv.nix
.github/workflows/: rust.yml
collector/: Cargo.toml  README.md
collector/src/: main.rs
rusplay/: Cargo.toml  README.md
rusplay/src/: lib.rs  models.rs
rusplay/tests/: common.rs  integration.rs  mock.rs
src/: lib.rs  models.rs
tests/: common.rs  integration.rs
