[package]
name = "rusplay_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
rusplay = { path = "../rusplay" }
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = "1.0.228"
futures = "0.3.31"
chrono = "0.4.42"

